@@ -1,6 +1,5 @@
  * Support averages
  * Support scaling for split boards
- * Support overriding vulnerabilities
- * Support board number epochs
  * gsalliere
  * check movements
+ * support adjusted scores
